# noorjyoti

./: .gitignore  .replit  DEPLOYMENT.md  SIGNUP_NOTES.md  bhagavad_gita_tts.py  ekdharma_voice_gen.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  ram_charit_manas_tts.py  replit.md  threat_model.md
artifacts/api-server/: package.json  tsconfig.json  vitest.config.ts
artifacts/api-server/src/: app.ts
artifacts/ekdharma/: index.html  package.json
artifacts/ekdharma-site/: .gitignore  astro.config.mjs  package.json  tsconfig.json
artifacts/ekdharma-site/.astro/: data-store.json  settings.json
artifacts/ekdharma/src/: App.tsx  (+1 more)
artifacts/mobile/: RELEASE.md  app.json  eas.json  package.json
artifacts/web/: index.html  package.json
attached_assets/: EkDharma_AppStore_Listing_1778472348381.docx  EkDharma_App_1778472283412.jsx  EkDharma_Backend_API_1778472350912.py  EkDharma_ReactNative_App_1778472353685.tsx  Pasted-Based-on-the-current-state-of-NoorJyoti-you-have-built-_1780751965927.txt  Pasted-Convert-whole-ram-charit-mans-into-audio-file-in-variou_1778465517197.txt  Pasted-Let-s-address-the-remaining-security-vulnerabilities-sp_1780752380672.txt  Pasted-Let-s-do-this-Transforming-NoorJyoti-into-a-full-scale-_1780752198204.txt  Pasted-Since-you-are-ready-to-execute-on-all-of-these-fronts-s_1780752298452.txt  ekdharma_voice_gen_1778472278893.py  noorjyoti_website_1778472572362.html  noorjyoti_website_v2_1778472637277.html
input_texts/: sample_balkand_hi.txt
lib/api-spec/: openapi.yaml
lib/db/: package.json
scripts/: package.json
(+135 files in other folders)
