[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-storage>=3.10.1",
    "gtts>=2.5.4",
    "openai>=2.36.0",
    "psycopg[binary]>=3.3.4",
    "tqdm>=4.67.3",
]

[tool.uv]
# Security: force patched cryptography (GHSA-537c-gmf6-5ccf, transitive via google-auth).
# Pin to the 48.x patch to avoid a breaking major bump right before launch.
constraint-dependencies = ["cryptography>=48.0.1,<49"]
